--- a/index.html
+++ b/index.html
@@ -6,6 +6,31 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <div class="card-wrapper">
+    <a href="リンク先のURL" class="card-link">
+      <div class="card">
+        <!-- カードのヘッダー -->
+        <div class="card-header">
+          カードのタイトル
+        </div>
+
+        <!-- カードの画像 -->
+        <div class="card-image">
+          <img src="https://placehold.jp/300x300.png" alt="カードの画像">
+        </div>
+
+        <!-- カードの本文 -->
+        <div class="card-body">
+          <p>これはカードの本文です。詳細な説明やテキストをここに配置します。</p>
+        </div>
+
+        <!-- カードのフッター -->
+        <div class="card-footer">
+          カードのフッター
+        </div>
+      </div>
+    </a>
+  </div>
 </body>
+
 </html>
