--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
-<body>
+<body style="padding : 40px; background: #eee; ">
   <div class="card-wrapper">
     <a href="リンク先のURL" class="card-link">
       <div class="card">
