--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body style="padding : 40px; background: #eee; ">
   <div class="card-wrapper">
-    <a href="リンク先のURL" class="card-link">
+    <a href="#" class="card-link">
       <div class="card">
         <!-- カードのヘッダー -->
         <div class="card-header">
